@@ -42,7 +42,7 @@ public class TpsIdenterAdapter extends FasteDataAdapter {
                 .map(value -> new TpsIdent(
                         value,
                         tpsIdentTagAdapter.findAllTagsByIdent(value.getFnr())
-                )).collect(Collectors.toList());
+                )).toList();
         return new TpsIdentListe(list);
     }
 
@@ -52,7 +52,7 @@ public class TpsIdenterAdapter extends FasteDataAdapter {
         List<TpsIdent> liste = tpsIdentModels.map(tpsIdentModel -> {
             List<TagModel> tagModels = fetchTagsByIdent(tpsIdentModel.getFnr());
             return new TpsIdent(tpsIdentModel, tagModels);
-        }).collect(Collectors.toList());
+        }).toList();
         return new TpsIdentListe(liste);
     }
 
@@ -63,7 +63,7 @@ public class TpsIdenterAdapter extends FasteDataAdapter {
         List<TpsIdent> liste = tpsIdentModels.stream().map(tpsIdentModel -> {
             List<TagModel> tagModels = fetchTagsByIdent(tpsIdentModel.getFnr());
             return new TpsIdent(tpsIdentModel, tagModels);
-        }).collect(Collectors.toList());
+        }).toList();
 
         log.info("Fant {} personer fra gruppe {}", liste.size(), gruppe);
         return new TpsIdentListe(liste);
@@ -92,7 +92,7 @@ public class TpsIdenterAdapter extends FasteDataAdapter {
             TpsIdentModel tpsIdentModel = tpsIdenterRepository.save(
                     new TpsIdentModel(tpsIdent, getOppinnelse(tpsIdent), getGruppe(tpsIdent))
             );
-            List<TagModel> tagModels = tpsIdent.getTags() == null ? Collections.emptyList() : tpsIdent.getTags().stream().map(tagsAdapter::save).collect(Collectors.toList());
+            List<TagModel> tagModels = tpsIdent.getTags() == null ? Collections.emptyList() : tpsIdent.getTags().stream().map(tagsAdapter::save).toList();
             tagModels.forEach(tagModel -> tpsIdentTagAdapter.save(
                     new TpsIdentTagModel(null, tpsIdentModel, tagModel)
             ));
