@@ -33,13 +33,14 @@ public class AaregConsumer {
         this.restTemplate = restTemplate;
         this.sendArbeidsforholdTilAaregUrl = new UriTemplate(aaregServerUrl + "/v1/syntetisering/sendTilAareg?fyllUtArbeidsforhold=true");
     }
+
     public void sendArbeidsforhold(AaregListe liste, String environment) {
         List<AaregRequest> requestList = liste.getListe()
                 .stream()
                 // TODO filter arbeidsforhold som allerede eksisterer.
                 // .filter(item -> getArbeidsforhold(item.getFnr(), environment).isEmpty())
                 .map(item -> new AaregRequest(new Arbeidsforhold(item), environment))
-                .collect(Collectors.toList());
+                .toList();
 
         try {
             restTemplate.exchange(
