@@ -40,7 +40,7 @@ public class PersonFasteDataConsumer {
     public void opprett(TpsIdentListe tpsIdentListe) {
         tokenExchange.exchange(serverProperties)
                 .flatMapMany(token -> Flux.concat(
-                        tpsIdentListe.getListe().stream().map(value -> opprett(value, token)).collect(Collectors.toList())
+                        tpsIdentListe.getListe().stream().map(value -> opprett(value, token)).toList()
                 ))
                 .collectList()
                 .block();
